# pistis

./: Cargo.toml  LICENSE  README.md  consensus.gp  shell.nix  update-size
benches/: fischlin.rs  usrs.rs
data/: agg_verify.csv  bootstrap_[c=0.999,d=0.0].csv  bootstrap_[c=0.999,d=0.1].csv  bootstrap_[c=0.999,d=0.2].csv  bootstrap_[c=0.999,d=0.3].csv  bootstrap_[c=0.999,d=0.4].csv  bootstrap_[h=0.55,c=0.990].csv  bootstrap_[h=0.55,c=0.99900].csv  bootstrap_[h=0.55,c=0.99990].csv  bootstrap_[h=0.55,c=0.99999].csv  bootstrap_[h=0.55,c=0.999].csv  bootstrap_[h=0.55,d=0.0].csv  bootstrap_[h=0.55,d=0.1].csv  bootstrap_[h=0.55,d=0.2].csv  bootstrap_[h=0.55,d=0.3].csv  bootstrap_[h=0.67,c=0.990].csv  bootstrap_[h=0.67,c=0.99900].csv  bootstrap_[h=0.67,c=0.99990].csv  bootstrap_[h=0.67,c=0.99999].csv  bootstrap_[h=0.67,c=0.999].csv  bootstrap_[h=0.90,c=0.990].csv  bootstrap_[h=0.90,c=0.99900].csv  bootstrap_[h=0.90,c=0.99990].csv  bootstrap_[h=0.90,c=0.99999].csv  bootstrap_[h=0.90,c=0.999].csv  network_delay_[h=0.51,d=0.00].csv  network_delay_[h=0.51,d=0.01].csv  network_delay_[h=0.51,d=0.02].csv  network_delay_[h=0.51,d=0.03].csv  network_delay_[h=0.51,d=0.04].csv  network_delay_[h=0.51,d=0.05].csv  network_delay_[h=0.51,d=0.06].csv  network_delay_[h=0.51,d=0.07].csv  network_delay_[h=0.51,d=0.08].csv  network_delay_[h=0.51,d=0.09].csv  network_delay_[h=0.51,d=0.10].csv  network_delay_[h=0.55,d=0.00].csv  network_delay_[h=0.55,d=0.05].csv  network_delay_[h=0.55,d=0.10].csv  network_delay_[h=0.55,d=0.15].csv  (+31 more)
src/: lib.rs  main.rs  poe.rs  ro.rs  usrs.rs  util.rs
