[package]
name = "pistis"
version = "0.1.0"
authors = ["Optimal Confusion <optimal-confusion@protonmail.com>"]
edition = "2018"

#[profile.bench]
#opt-level = 0 
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "*"
group = "*"
ff = "*"
rand = "*"
rand_core = "*"
sha3 = "*"
rayon = "*"
