[package]
name = "pistis"
version = "0.1.0"
authors = ["Optimal Confusion <optimal-confusion@protonmail.com>"]
edition = "2018"

[[bench]]
name = "fischlin"
harness = false

[[bench]]
name = "usrs"
harness = false

[dev-dependencies]
criterion = "*"

[dependencies]
pairing = "*"
group = "*"
ff = "*"
rand = { version = "*", features = [ "small_rng" ] }
rand_core = "*"
rand_distr = "*"
sha3 = "*"
rayon = "*"

