[package]
name = "pistis"
version = "0.1.0"
authors = ["Thomas Kerber <papers@tkerber.org>"]
edition = "2018"

[[bench]]
name = "fischlin"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
pairing = "0.15"
group = "0.2"
ff = "0.5"
rand = { version = "0.7", features = [ "small_rng" ] }
rand_core = "0.5"
rand_distr = "0.2"
sha3 = "0.8"
rayon = "1.3"

